# ollama-client-lib

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: python-publish.yml
examples/: basic_usage.py  check_models.py  context_manager.py  custom_prompt.py  multiple_clients.py  rag_example.py  streaming.py
ollama_client_lib/: __init__.py  client.py
tests/: __init__.py  test_client.py  test_integration.py
