[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-client-lib"
version = "1.0.0"
description = "Object-oriented library for interacting with Ollama Cloud"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cristian Tangarife", email = "hike.goat5691@eagereverest.com"}
]
keywords = ["ollama", "llm", "ai", "client", "rag", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ctangarife/ollama-client-lib"
Documentation = "https://github.com/ctangarife/ollama-client-lib#readme"
Repository = "https://github.com/ctangarife/ollama-client-lib"
Issues = "https://github.com/ctangarife/ollama-client-lib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_client_lib*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

